<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Login"
      android:textSize="30dp"
      android:textColor="#717171"
      />

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_content"
            android:textSize="20dp"
            android:textColor="@color/Logincolor"

            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_content1"
            android:textSize="20dp"
            android:textColor="@color/Logincolor"

            />

        <EditText
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Logincolor"
            android:foregroundTint="@color/Logincolor"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button"
            android:text="@string/login_button_text" />

    </LinearLayout>

</LinearLayout>