<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="4"
    android:background="@color/Login_button_white"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2"
        android:gravity="center"
        android:layout_height="match_parent">

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            app:fonttype="bold"
            android:layout_marginTop="10dp"
            android:text="@string/booking"
            android:textAlignment="center"
            android:textSize="10dp"
            android:layout_height="wrap_content"/>

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textSize="25dp"
            app:fonttype="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2"
        android:gravity="center"
        android:layout_height="match_parent">

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            app:fonttype="bold"
            android:layout_marginTop="10dp"
            android:text="@string/operator_bill"
            android:textAlignment="center"
            android:textSize="10dp"
            android:layout_height="wrap_content"/>

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textSize="25dp"
            app:fonttype="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2"
        android:gravity="center"
        android:layout_height="match_parent">

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            app:fonttype="bold"
            android:text="@string/incentive"
            android:textAlignment="center"
            android:textSize="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textSize="25dp"
            app:fonttype="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2"
        android:gravity="center"
        android:layout_height="match_parent">

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            app:fonttype="bold"
            android:text="@string/total"
            android:textAlignment="center"
            android:textSize="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <com.example.taxidriver.extended.TexiFonts
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textSize="25dp"
            app:fonttype="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>


    </LinearLayout>




</LinearLayout>